-- USNDC Schema Deployment Batch 1
-- Tables in this batch: 20

CREATE TABLE ACTIVE_ID (
    TAGNAME VARCHAR(8)
    TAGID BIGINT
    CLIENT_INFO VARCHAR(64)
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE AFFILIATION (
    NET VARCHAR(8)
    STA VARCHAR(6)
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    LDDATE TIMESTAMP
    CONSTRAINT pk_affiliation PRIMARY KEY (NET, STA, TIME)
);

CREATE TABLE ALGORITHM (
    ALGORITHM_ID BIGINT
    ALGORITHM_NAME VARCHAR(64)
    DESCRIPTION VARCHAR(4000)
    ON_DATE TIMESTAMP
    OFF_DATE TIMESTAMP
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
    CONSTRAINT pk_algorithm PRIMARY KEY (ALGORITHM_ID)
);

CREATE TABLE ALPHASITE (
    STA VARCHAR(6)
    ADDRESS VARCHAR(16)
    PREFDLID BIGINT
    PREFPORT INTEGER
    CON_ALLOWED VARCHAR(1)
    DLID BIGINT
    TIME DOUBLE PRECISION
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE AMP3C (
    ARID BIGINT
    CFREQ REAL
    VAMP REAL
    VSNR REAL
    HAMP REAL
    HSNR REAL
    HTOV REAL
    RID VARCHAR(8)
    LDDATE TIMESTAMP
);

CREATE TABLE AMPDESCRIPT (
    AMPTYPE VARCHAR(8)
    TOFF REAL
    TLEN REAL
    GVLO REAL
    GVHI REAL
    MTYPE VARCHAR(8)
    AMPDESCR VARCHAR(255)
    LDDATE TIMESTAMP
);

CREATE TABLE AMPLITUDE (
    AMPID BIGINT
    ARID BIGINT
    PARID BIGINT
    CHAN VARCHAR(8)
    AMP REAL
    PER REAL
    SNR REAL
    AMPTIME DOUBLE PRECISION
    TIME DOUBLE PRECISION
    DURATION REAL
    DELTAF REAL
    AMPTYPE VARCHAR(8)
    UNITS VARCHAR(15)
    CLIP VARCHAR(1)
    INARRIVAL VARCHAR(1)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
    CONSTRAINT pk_amplitude PRIMARY KEY (AMPID)
);

CREATE TABLE AMPLITUDE_DYN_PARS_DBL (
    AMPID BIGINT
    GROUP_NAME VARCHAR(48)
    PARAM_NAME VARCHAR(48)
    D_VALUE DOUBLE PRECISION
    LDDATE TIMESTAMP
    CONSTRAINT pk_amplitude_dyn_pars_dbl PRIMARY KEY (AMPID)
);

CREATE TABLE AMPLITUDE_DYN_PARS_INT (
    AMPID BIGINT
    GROUP_NAME VARCHAR(48)
    PARAM_NAME VARCHAR(48)
    I_VALUE BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_amplitude_dyn_pars_int PRIMARY KEY (AMPID)
);

CREATE TABLE AMPLITUDE_DYN_PARS_STR (
    AMPID BIGINT
    GROUP_NAME VARCHAR(48)
    PARAM_NAME VARCHAR(48)
    S_VALUE VARCHAR(1024)
    LDDATE TIMESTAMP
    CONSTRAINT pk_amplitude_dyn_pars_str PRIMARY KEY (AMPID)
);

CREATE TABLE AOI (
    LAT DOUBLE PRECISION
    LON DOUBLE PRECISION
    AOI_GEOCHAR VARCHAR(1)
    LFAOI_GEOCHAR VARCHAR(1)
    DEPTH_GEOCHAR VARCHAR(1)
    SEISMIC_GEOCHAR VARCHAR(1)
    TERRAIN_GEOCHAR VARCHAR(1)
    ONDATE INTEGER
    OFFDATE INTEGER
    LDDATE TIMESTAMP
);

CREATE TABLE APMA (
    PHASE VARCHAR(8)
    ARID BIGINT
    FREQ REAL
    SNR REAL
    AMPP REAL
    AMPS REAL
    AMPLR REAL
    RECT REAL
    PLANS REAL
    PLANLR REAL
    HVRATP REAL
    HVRAT REAL
    HMXMN REAL
    INANG3 REAL
    SEAZP REAL
    SEAZS REAL
    SEAZLR REAL
    INANG1 REAL
    PPHASETIME DOUBLE PRECISION
    SPHASETIME DOUBLE PRECISION
    AUTH VARCHAR(15)
    APMARID BIGINT
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE ARRIVAL (
    STA VARCHAR(6)
    TIME DOUBLE PRECISION
    ARID BIGINT
    JDATE INTEGER
    STASSID BIGINT
    CHANID BIGINT
    CHAN VARCHAR(8)
    IPHASE VARCHAR(8)
    STYPE VARCHAR(1)
    DELTIM REAL
    AZIMUTH REAL
    DELAZ REAL
    SLOW REAL
    DELSLO REAL
    EMA REAL
    RECT REAL
    AMP REAL
    PER REAL
    LOGAT REAL
    CLIP VARCHAR(1)
    FM VARCHAR(2)
    SNR REAL
    QUAL VARCHAR(1)
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_arrival PRIMARY KEY (ARID)
);

CREATE TABLE ARRIVAL_DYN_PARS_DBL (
    ARID BIGINT
    GROUP_NAME VARCHAR(48)
    PARAM_NAME VARCHAR(48)
    D_VALUE DOUBLE PRECISION
    LDDATE TIMESTAMP
    CONSTRAINT pk_arrival_dyn_pars_dbl PRIMARY KEY (ARID)
);

CREATE TABLE ARRIVAL_DYN_PARS_INT (
    ARID BIGINT
    GROUP_NAME VARCHAR(48)
    PARAM_NAME VARCHAR(48)
    I_VALUE BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_arrival_dyn_pars_int PRIMARY KEY (ARID)
);

CREATE TABLE ARRIVAL_DYN_PARS_STR (
    ARID BIGINT
    GROUP_NAME VARCHAR(48)
    PARAM_NAME VARCHAR(48)
    S_VALUE VARCHAR(1024)
    LDDATE TIMESTAMP
    CONSTRAINT pk_arrival_dyn_pars_str PRIMARY KEY (ARID)
);

CREATE TABLE ARRIVAL_TAG (
    ARID BIGINT
    PROCESS_MODE VARCHAR(32)
    PROCESS_ATTRIBUTE VARCHAR(32)
    LDDATE TIMESTAMP
    CONSTRAINT pk_arrival_tag PRIMARY KEY (ARID)
);

CREATE TABLE AR_INFO (
    ORID BIGINT
    ARID BIGINT
    TIME_ERROR_CODE INTEGER
    AZ_ERROR_CODE INTEGER
    SLOW_ERROR_CODE INTEGER
    SRC_DPNT_CORR_TYPE INTEGER
    VMODEL VARCHAR(16)
    TOTAL_TRAVEL_TIME REAL
    TT_TABLE_VALUE REAL
    ELLIP_CORR REAL
    ELEV_CORR REAL
    BULK_STATIC_STA_CORR REAL
    TT_SRC_DPNT_CORR REAL
    TT_MODEL_ERROR REAL
    TT_MEAS_ERROR REAL
    TT_MODEL_PLUS_MEAS_ERROR REAL
    AZ_SRC_DPNT_CORR REAL
    AZ_MODEL_ERROR REAL
    AZ_MEAS_ERROR REAL
    AZ_MODEL_PLUS_MEAS_ERROR REAL
    SL_SRC_DPNT_CORR REAL
    SL_MODEL_ERROR REAL
    SL_MEAS_ERROR REAL
    SL_MODEL_PLUS_MEAS_ERROR REAL
    TIME_IMPORT REAL
    AZ_IMPORT REAL
    SLOW_IMPORT REAL
    SLOW_VEC_RES REAL
    LDDATE TIMESTAMP
);

CREATE TABLE ASSOC (
    ARID BIGINT
    ORID BIGINT
    STA VARCHAR(6)
    PHASE VARCHAR(8)
    BELIEF REAL
    DELTA REAL
    SEAZ REAL
    ESAZ REAL
    TIMERES REAL
    TIMEDEF VARCHAR(1)
    AZRES REAL
    AZDEF VARCHAR(1)
    SLORES REAL
    SLODEF VARCHAR(1)
    EMARES REAL
    WGT REAL
    VMODEL VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_assoc PRIMARY KEY (ARID, ORID)
);

CREATE TABLE ASSOC_GA (
    ARID BIGINT
    ORID BIGINT
    STA VARCHAR(6)
    PHASE VARCHAR(8)
    BELIEF REAL
    DELTA REAL
    SEAZ REAL
    ESAZ REAL
    TIMERES REAL
    TIMEDEF VARCHAR(1)
    AZRES REAL
    AZDEF VARCHAR(1)
    SLORES REAL
    SLODEF VARCHAR(1)
    EMARES REAL
    WGT REAL
    VMODEL VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
);

