-- USNDC Schema Deployment Batch 2
-- Tables in this batch: 20

CREATE TABLE ASSOC_GA_DEL (
    ARID BIGINT
    ORID BIGINT
    STA VARCHAR(6)
    PHASE VARCHAR(8)
    BELIEF REAL
    DELTA REAL
    SEAZ REAL
    ESAZ REAL
    TIMERES REAL
    TIMEDEF VARCHAR(1)
    AZRES REAL
    AZDEF VARCHAR(1)
    SLORES REAL
    SLODEF VARCHAR(1)
    EMARES REAL
    WGT REAL
    VMODEL VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE BEAM (
    WFID BIGINT
    FILTERID BIGINT
    AZIMUTH REAL
    SLOW REAL
    DESCRIP VARCHAR(50)
    LDDATE TIMESTAMP
);

CREATE TABLE BULLETIN_RELEASE (
    ERPID BIGINT
    ORID BIGINT
    EVID BIGINT
    MAGID BIGINT
    AOI_GEOCHAR VARCHAR(1)
    CLASSIFICATION_COMMENTS VARCHAR(4000)
    CLASSIFICATION_RESULTS VARCHAR(4000)
    GRNAME VARCHAR(40)
    RELEASE_STATUS VARCHAR(16)
    AUTH VARCHAR(15)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE BULLETIN_RELEASE_EXPORT (
    ERP_SEQ BIGINT
    MAX_ERPID BIGINT
    AUTH VARCHAR(15)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE BUTTERWORTH_FILTER (
    FILTERID BIGINT
    FILTER_TYPE VARCHAR(16)
    FILTER_ORDER SMALLINT
    FILTER_LOW REAL
    FILTER_HIGH REAL
    FILTER_ZEROPH SMALLINT
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CHANNAME (
    EXTERN_STA VARCHAR(6)
    EXTERN_CHAN VARCHAR(8)
    EXTERN_AUTH VARCHAR(20)
    INTERN_STA VARCHAR(6)
    INTERN_CHAN VARCHAR(8)
    INTERN_CHANID BIGINT
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE CHAN_GROUPS (
    CLASS VARCHAR(16)
    NAME VARCHAR(20)
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    DURATION REAL
    INWFACTIVITY SMALLINT
    ONDATE INTEGER
    OFFDATE INTEGER
    LDDATE TIMESTAMP
);

CREATE TABLE CLASSIFICATION (
    CLASSIFICATION_ID BIGINT
    DESCRIPTION VARCHAR(64)
    CLASS_LEVEL_ID BIGINT
    CLASS_DISSEM_ID BIGINT
    CLASS_DERIVED_ID BIGINT
    CLASS_DECLASS_ID BIGINT
    CLASS_REFER_ID BIGINT
    CLASS_OPR_ID BIGINT
    ON_DATE TIMESTAMP
    OFF_DATE TIMESTAMP
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
    MODDATE TIMESTAMP
);

CREATE TABLE CLASSIFICATION_LEVEL (
    CLASS_LEVEL_ID BIGINT
    CLASS_LEVEL VARCHAR(64)
    PARAGRAPH_MARK VARCHAR(16)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLASSIFICATION_LOOKUP (
    CLASS_LOOKUP_ID BIGINT
    APPLICATION VARCHAR(64)
    CLASSIFICATION_ID BIGINT
    ON_DATE TIMESTAMP
    OFF_DATE TIMESTAMP
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
    MODDATE TIMESTAMP
);

CREATE TABLE CLASSIFICATION_OPR (
    CLASS_OPR_ID BIGINT
    CLASS_OPR VARCHAR(64)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLASS_DECLASS_ID (
    CLASS_DECLASS_ID BIGINT
    CLASS_DECLASS VARCHAR(4000)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLASS_DERIVED_ID (
    CLASS_DERIVED_ID BIGINT
    CLASS_DERIVED VARCHAR(4000)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLASS_DISSEM_ID (
    CLASS_DISSEM_ID BIGINT
    CLASS_DISSEM VARCHAR(64)
    PARAGRAPH_MARK VARCHAR(16)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLUSTER_INFO (
    CLUID BIGINT
    DESCRIP VARCHAR(50)
    PREFOR BIGINT
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLUSTER_MAGREF (
    CLUSTAID BIGINT
    ACTIVETIME DOUBLE PRECISION
    ORID BIGINT
    AMPTYPE VARCHAR(8)
    MTYPE VARCHAR(15)
    MVALUE REAL
    FILTERID BIGINT
    LEAD REAL
    DURATION REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLUSTER_MEC (
    CLUSTAID BIGINT
    STA VARCHAR(6)
    PHASE VARCHAR(8)
    ACTIVETIME DOUBLE PRECISION
    CORR_TYPE VARCHAR(16)
    CORRECTION REAL
    UNCERTAINTY REAL
    ONDATE INTEGER
    OFFDATE INTEGER
    TOTAL_EVENTS SMALLINT
);

CREATE TABLE CLUSTER_ORID (
    CLUSTAID BIGINT
    ORID BIGINT
    ACTIVETIME DOUBLE PRECISION
    LDDATE TIMESTAMP
);

CREATE TABLE CLUSTER_OVERRIDE (
    CLUSTAID BIGINT
    ACTIVETIME DOUBLE PRECISION
    THRESHOLD REAL
    SSD_DIMENSION INTEGER
    SVD_LEAD REAL
    MIN_DETECTION_INTERVAL REAL
    PREFPHASE VARCHAR(16)
    LEAD REAL
    LAG REAL
    BEST_EVENT_MATCH_MULTIPLE REAL
    PHASE_ONSET_MULTIPLE REAL
    DET_TRACE_TRIM_MULTIPLE REAL
    CHANNEL_MASKING_THRESHOLD REAL
    PFA REAL
    THRESHOLD_PERCENT_OVERLAP INTEGER
    PHASE_SPECIFIC_OVERRIDE_REC VARCHAR(32)
    MAX_DELAZ REAL
    MAX_DELSLOW REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CLUSTER_THRESHOLD (
    CLUSTAID BIGINT
    DETECTOR_TYPE VARCHAR(16)
    SSD_DIMENSION INTEGER
    ACTIVETIME DOUBLE PRECISION
    ORID BIGINT
    THRESHOLD REAL
    PFA REAL
    OVERLAP INTEGER
    CHANNEL_MASKING_THRESHOLD REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

