-- USNDC Schema Deployment Batch 3
-- Tables in this batch: 20

CREATE TABLE CODAMAG_INPUT (
    AMPID BIGINT
    FLO REAL
    FHI REAL
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    ORID BIGINT
    ARID BIGINT
    AMPDEF VARCHAR(1)
    DELTA REAL
    BWRATIO REAL
    SAMPRATE REAL
    ENVSLOW REAL
    HWIDE REAL
    POLYID BIGINT
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    NOISE_START_TIME DOUBLE PRECISION
    NOISE_END_TIME DOUBLE PRECISION
    TMEAS DOUBLE PRECISION
    SHAPE_SPREADING REAL
    SHAPE_DECAY REAL
    SHAPEDMIN REAL
    SHAPEDMAX REAL
    PEAK_VELOCITY REAL
    VGDMIN REAL
    VGDMAX REAL
    PATH_COR_TYPE VARCHAR(8)
    PATH_COR REAL
    SITE_COR REAL
    SITEUNIT VARCHAR(9)
    WMODEL_NAME VARCHAR(50)
    YINTERCEPT REAL
    YSLOPE REAL
    FFACTOR REAL
    SRC_REGION VARCHAR(50)
    MBINTERCEPT REAL
    MBSLOPE REAL
    MBSIGMA REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CODAMAG_OUTPUT (
    AMPID BIGINT
    FLO REAL
    FHI REAL
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    ORID BIGINT
    ARID BIGINT
    DELTA REAL
    RAW_AMP REAL
    UNCERTAINTY REAL
    NOISE_AMP REAL
    AMPCOR REAL
    AMP_WGT REAL
    MB_CODA REAL
    YIELD REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE CONTINUOUS_DATA_STATUS (
    STATUS_ID BIGINT
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    INDICATOR VARCHAR(64)
    START_DATE TIMESTAMP
    END_DATE TIMESTAMP
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE DATAUSER (
    USERID BIGINT
    POCID BIGINT
    USERNAME VARCHAR(24)
    DOMAIN VARCHAR(48)
    MSGTYPE VARCHAR(16)
    USERSTATUS VARCHAR(24)
    PRIORITY SMALLINT
    COMMID BIGINT
    EMAILLIMIT INTEGER
    SERVICETIME DOUBLE PRECISION
    LDDATE TIMESTAMP
    CONSTRAINT pk_datauser PRIMARY KEY (USERNAME)
);

CREATE TABLE DA_INTERVAL (
    INTVLID BIGINT
    CLASS VARCHAR(16)
    NAME VARCHAR(20)
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    STATE VARCHAR(16)
    AUTH VARCHAR(15)
    PERCENT_AVAILABLE DOUBLE PRECISION
    PROC_START_DATE TIMESTAMP
    PROC_END_DATE TIMESTAMP
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE DA_REFSTA_LATENCY (
    LATENCY_ID BIGINT
    STA VARCHAR(6)
    INTERVAL_START_TIME TIMESTAMP
    INTERVAL_END_TIME TIMESTAMP
    MIN_LATENCY_SECS DOUBLE PRECISION
    MAX_LATENCY_SECS DOUBLE PRECISION
    TOTAL_SECS DOUBLE PRECISION
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE DA_REFSTA_SUMMARY (
    SUMMARY_ID BIGINT
    STA VARCHAR(6)
    INTERVAL_START_TIME TIMESTAMP
    INTERVAL_END_TIME TIMESTAMP
    PERCENT DOUBLE PRECISION
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE DA_SITECHAN_LATENCY (
    LATENCY_ID BIGINT
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    INTERVAL_START_TIME TIMESTAMP
    INTERVAL_END_TIME TIMESTAMP
    MIN_LATENCY_SECS DOUBLE PRECISION
    MAX_LATENCY_SECS DOUBLE PRECISION
    TOTAL_SECS DOUBLE PRECISION
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE DECONVOLUTION (
    DECONID BIGINT
    TYPE VARCHAR(16)
    LOWCUTFRAC REAL
    LOWPASSFREQ REAL
    HIGHCUTFRAC REAL
    HIGHPASSFREQ REAL
    WATERLEVEL REAL
    FINALUNITS VARCHAR(1)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE DETECTION (
    ARID BIGINT
    JDATE INTEGER
    TIME DOUBLE PRECISION
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    BMTYP VARCHAR(4)
    SPROID BIGINT
    CFREQ REAL
    SEAZ REAL
    DELAZ REAL
    SLOW REAL
    DELSLO REAL
    SNR REAL
    STAV REAL
    FSTAT REAL
    DELTIM REAL
    BANDW REAL
    FKQUAL SMALLINT
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE DETECTION_THRESHOLD (
    CLUSTAID BIGINT
    ORID BIGINT
    DETECTOR_TYPE VARCHAR(16)
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    THRESHOLD REAL
    NUM_DETECTIONS INTEGER
    STA VARCHAR(6)
    PFA REAL
    OVERLAP INTEGER
    CHANNEL_MASKING_THRESHOLD REAL
    SSD_DIMENSION INTEGER
    DOF REAL
    DATA_MASKED INTEGER
    TOTAL_DATA INTEGER
    DESCRIPT VARCHAR(100)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE DISCRIMUSE (
    ORID BIGINT
    DISCRIMTYPE VARCHAR(10)
    STA VARCHAR(6)
    DISCRIM_FLAG VARCHAR(1)
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE DISCRIMVOTE (
    ORID BIGINT
    DISCRIMTYPE VARCHAR(10)
    STA VARCHAR(6)
    VOTE VARCHAR(1)
    COMMID BIGINT
    OVERRIDE INTEGER
    EVAL_COMMENT VARCHAR(22)
    LDDATE TIMESTAMP
);

CREATE TABLE DISCRIM_PARAM (
    POLYID BIGINT
    AMPCOR_VERID BIGINT
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    PARAMSETID BIGINT
    LOWCUTFRAC REAL
    MINLOWPASSFREQ REAL
    HIGHPASSFRAC REAL
    HIGHCUTFRAC REAL
    PNGV1 REAL
    PNGV2 REAL
    PNINT DOUBLE PRECISION
    PGGV1 REAL
    PGGV2 REAL
    PGINT DOUBLE PRECISION
    SNGV1 REAL
    SNGV2 REAL
    SNINT DOUBLE PRECISION
    LGGV1 REAL
    LGGV2 REAL
    LGINT DOUBLE PRECISION
    TFACTOR REAL
    TAPERWIDTH REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE DLMAN (
    DLID BIGINT
    MACHINE VARCHAR(32)
    RUNNING VARCHAR(1)
    CONNMANPORT INTEGER
    CONTROLPORT INTEGER
    ARCHIVEPORT INTEGER
    FORWARDPORT INTEGER
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_CHAN_AMPLITUDE (
    ORID BIGINT
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    PHASE VARCHAR(8)
    LFREQ DOUBLE PRECISION
    HFREQ DOUBLE PRECISION
    AMPCOR_VERID BIGINT
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    AMPRAW DOUBLE PRECISION
    AMPMDAC DOUBLE PRECISION
    AMPDAC DOUBLE PRECISION
    AMPMAC DOUBLE PRECISION
    NTIME DOUBLE PRECISION
    NENDTIME DOUBLE PRECISION
    SNR DOUBLE PRECISION
    AMPDEF VARCHAR(1)
    AUTH VARCHAR(15)
    COMMENTS VARCHAR(4000)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_CONSTANT (
    NAME VARCHAR(30)
    VALUE DOUBLE PRECISION
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_COV (
    POLYID BIGINT
    COV_VERID BIGINT
    SOURCE_TYPE VARCHAR(15)
    DISCRIM_NAME_1 VARCHAR(10)
    DISCRIM_NAME_2 VARCHAR(10)
    COVARIANCE DOUBLE PRECISION
    MEAN_1 DOUBLE PRECISION
    AUTH VARCHAR(15)
    COMMENTS VARCHAR(4000)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_DISCRIMINANTS (
    ORID BIGINT
    DISCRIM_NAME VARCHAR(15)
    COV_VERID BIGINT
    DISCRIM_P_VALUE DOUBLE PRECISION
    DISCRIM_DEF VARCHAR(1)
    EXPLANATION VARCHAR(4000)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_EVENT_RESULTS (
    ORID BIGINT
    EVID BIGINT
    COV_VERID BIGINT
    RDA_VERID BIGINT
    CLASS_TYPE VARCHAR(15)
    CLASS_TYPE_OVRD VARCHAR(15)
    COMMENTS VARCHAR(4000)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

