-- USNDC Schema Deployment Batch 4
-- Tables in this batch: 20

CREATE TABLE ECM_REF_CHAN_AMPLITUDE (
    EVID BIGINT
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    PHASE VARCHAR(8)
    LFREQ DOUBLE PRECISION
    HFREQ DOUBLE PRECISION
    AMPCOR_VERID BIGINT
    POLYID BIGINT
    DELTA REAL
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    AMPRAW DOUBLE PRECISION
    AMPMDAC DOUBLE PRECISION
    AMPDAC DOUBLE PRECISION
    AMPMAC DOUBLE PRECISION
    NTIME DOUBLE PRECISION
    NENDTIME DOUBLE PRECISION
    SNR DOUBLE PRECISION
    AMPDEF VARCHAR(1)
    AUTH VARCHAR(15)
    COMMENTS VARCHAR(4000)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_REF_DISCRIM (
    EVID BIGINT
    COV_VERID BIGINT
    DISCRIM_NAME VARCHAR(15)
    DISCRIM_P_VALUE DOUBLE PRECISION
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_REF_EVENT (
    EVID BIGINT
    TIME DOUBLE PRECISION
    LAT DOUBLE PRECISION
    LON DOUBLE PRECISION
    DEPTH REAL
    MB REAL
    MS REAL
    MW REAL
    SOURCE_TYPE VARCHAR(7)
    SUB_TYPE VARCHAR(10)
    POLYID BIGINT
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_REGION_PREF_VERSION (
    POLYID BIGINT
    COV_VERID BIGINT
    RDA_VERID BIGINT
    AUTH VARCHAR(15)
    COMMENTS VARCHAR(4000)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_SOURCES (
    ORID BIGINT
    SOURCE_TYPE VARCHAR(15)
    COV_VERID BIGINT
    RDA_VERID BIGINT
    POP_MEM DOUBLE PRECISION
    CON_PROB DOUBLE PRECISION
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE ECM_STA_PREF_VERSION (
    POLYID BIGINT
    STA VARCHAR(6)
    AMPCOR_VERID BIGINT
    AUTH VARCHAR(15)
    COMMENTS VARCHAR(4000)
    LDDATE TIMESTAMP
);

CREATE TABLE ENVELOPE_CONTRIBUTION (
    FLO REAL
    FHI REAL
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    ORID BIGINT
    ARID BIGINT
    AMPDEF VARCHAR(1)
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE EVENT (
    EVID BIGINT
    EVNAME VARCHAR(32)
    PREFOR BIGINT
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_event PRIMARY KEY (EVID)
);

CREATE TABLE EVENT_CONTROL (
    ORID BIGINT
    EVID BIGINT
    PREFER_LOC VARCHAR(1)
    CONSTRAIN_OT SMALLINT
    CONSTRAIN_LATLON SMALLINT
    CONSTRAIN_DEPTH SMALLINT
    SRC_DPNT_CORR SMALLINT
    LOC_SRC_DPNT_REG VARCHAR(15)
    LOC_SDV_SCREEN SMALLINT
    LOC_SDV_MULT REAL
    LOC_ALPHA_ONLY SMALLINT
    LOC_ALL_STAS SMALLINT
    LOC_DIST_VARWGT SMALLINT
    LOC_USER_VARWGT REAL
    MAG_SRC_DPNT_REG VARCHAR(15)
    MAG_SDV_SCREEN SMALLINT
    MAG_SDV_MULT REAL
    MAG_ALPHA_ONLY SMALLINT
    MAG_ALL_STAS SMALLINT
    MB_MIN_DIST REAL
    MB_MAX_DIST REAL
    MMODEL VARCHAR(15)
    COV_SM_AXES REAL
    COV_DEPTH_TIME REAL
    OBS_CORR_METHOD SMALLINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_event_control PRIMARY KEY (EVID)
);

CREATE TABLE EVENT_CORRELATION (
    CORR_ID BIGINT
    SOURCE_ORID BIGINT
    SOURCE_EVID BIGINT
    SOURCE_STARTTIME DOUBLE PRECISION
    SOURCE_SECS DOUBLE PRECISION
    REFERENCE_ORID BIGINT
    REFERENCE_EVID BIGINT
    REFERENCE_STARTTIME DOUBLE PRECISION
    REFERENCE_SECS DOUBLE PRECISION
    STA VARCHAR(6)
    FILTER_STRING VARCHAR(2000)
    NUM_CHAN INTEGER
    CHAN_LIST VARCHAR(2000)
    CORR_COEF DOUBLE PRECISION
    CORR_TIME DOUBLE PRECISION
    SCAN_TYPE VARCHAR(32)
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE EVENT_QUALITY (
    EQID BIGINT
    ORID BIGINT
    EVQUAL REAL
    NETPROB REAL
    DETPROB REAL
    HISTPROB REAL
    NNDEF REAL
    NSMAJAX REAL
    NDELTA_STA REAL
    NTIMERES REAL
    NAZRES REAL
    NSLORES REAL
    NAMPRES REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE FEEDBACK (
    FEEDBACK_ID BIGINT
    EVID BIGINT
    ORID BIGINT
    EVENT_TIME DOUBLE PRECISION
    TITLE VARCHAR(64)
    ANALYST VARCHAR(32)
    ACCOUNT VARCHAR(15)
    FEEDBACK_ANALYST VARCHAR(32)
    FEEDBACK_ACCOUNT VARCHAR(15)
    RESPONSE VARCHAR(4000)
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE FEEDBACK_CATAFFILIATION (
    FBAFFILIATION_ID BIGINT
    FEEDBACK_ID BIGINT
    FBCATEGORY_ID BIGINT
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE FEEDBACK_CATEGORIES (
    FBCATEGORY_ID BIGINT
    TITLE VARCHAR(64)
    DESCRIPTION VARCHAR(4000)
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE FEEDBACK_SCREENSHOTS (
    FBSCREENSHOT_ID BIGINT
    FEEDBACK_ID BIGINT
    TITLE VARCHAR(64)
    DESCRIPTION VARCHAR(4000)
    TYPE VARCHAR(10)
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE FEEDBACK_STATE (
    FBSTATE_ID BIGINT
    FEEDBACK_ID BIGINT
    FBSTATECATEGORY_ID BIGINT
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE FEEDBACK_STATE_CATEGORIES (
    FBSTATECATEGORY_ID BIGINT
    TITLE VARCHAR(64)
    DESCRIPTION VARCHAR(4000)
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE FILTER (
    FILTERID BIGINT
    FILTER_METHOD VARCHAR(2)
    FILTER_STRING VARCHAR(2000)
    FILTER_HASH VARCHAR(2000)
    LDDATE TIMESTAMP
    CONSTRAINT pk_filter PRIMARY KEY (FILTERID)
);

CREATE TABLE FILTER_COEFFICIENTS (
    FILTERID BIGINT
    VALUE_NAME VARCHAR(48)
    COL_SEQ INTEGER
    D_VALUE DOUBLE PRECISION
    LDDATE TIMESTAMP
);

CREATE TABLE FILTER_GROUP (
    PARENT_FILTERID BIGINT
    CHILD_FILTERID BIGINT
    CHILD_SEQUENCE INTEGER
    LDDATE TIMESTAMP
);

