-- USNDC Schema Deployment Batch 6
-- Tables in this batch: 20

CREATE TABLE MSGDATATYPE (
    MSGID BIGINT
    MSGDTYPE VARCHAR(16)
    MSGDFORMAT VARCHAR(16)
    MSGSTATUS VARCHAR(32)
    FOFF BIGINT
    MSIZE INTEGER
    LDDATE TIMESTAMP
);

CREATE TABLE MSGDEST (
    MSGDID BIGINT
    MSGID BIGINT
    TRANSMETH VARCHAR(16)
    EMAILTO VARCHAR(64)
    MSGSTATUS VARCHAR(32)
    ITIME DOUBLE PRECISION
    TIMESENT DOUBLE PRECISION
    LDDATE TIMESTAMP
);

CREATE TABLE MSGDISC (
    MSGID BIGINT
    USERID BIGINT
    MSGVER VARCHAR(8)
    MSGTYPE VARCHAR(16)
    SUBTYPE VARCHAR(20)
    EXTMSGID VARCHAR(20)
    INTID BIGINT
    INTIDTYPE VARCHAR(16)
    MSGSRC VARCHAR(16)
    ITIME DOUBLE PRECISION
    IDATE INTEGER
    IMETHOD VARCHAR(8)
    ISRC VARCHAR(64)
    MSIZE INTEGER
    MSGSTATUS VARCHAR(32)
    SUBJECT VARCHAR(64)
    DIR VARCHAR(64)
    DFILE VARCHAR(32)
    FOFF BIGINT
    MFOFF INTEGER
    FILEOFF INTEGER
    FILESIZE INTEGER
    SIGTYPE VARCHAR(64)
    VERIFSTATUS VARCHAR(4)
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE MSVMAX_DESCRIPT (
    AMPID BIGINT
    STA VARCHAR(6)
    ORID BIGINT
    ARID BIGINT
    HIGH_SNR_COUNT SMALLINT
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE MSVMAX_RESULTS (
    AMPID BIGINT
    PER REAL
    MEASTYPE VARCHAR(1)
    AMP REAL
    AMPTIME DOUBLE PRECISION
    INS_RESPONSE REAL
    AMPCOR REAL
    MAGNITUDE REAL
    UNCERTAINTY REAL
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    LDDATE TIMESTAMP
);

CREATE TABLE NETMAG (
    MAGID BIGINT
    NET VARCHAR(8)
    ORID BIGINT
    EVID BIGINT
    MAGTYPE VARCHAR(6)
    NSTA INTEGER
    MAGNITUDE REAL
    UNCERTAINTY REAL
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_netmag PRIMARY KEY (MAGID)
);

CREATE TABLE NETWORK (
    NETWORKID BIGINT
    NET VARCHAR(8)
    NETWORK_NAME VARCHAR(32)
    DESCRIPTION VARCHAR(4000)
    NETWORK_TYPE VARCHAR(15)
    ON_DATE TIMESTAMP
    OFF_DATE TIMESTAMP
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

CREATE TABLE NETYIELD (
    YIELDID BIGINT
    NET VARCHAR(8)
    ORID BIGINT
    EVID BIGINT
    YIELD REAL
    NSTA INTEGER
    FFACTOR REAL
    WMODEL_NAME VARCHAR(50)
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE NET_CODA_SPECTRUM (
    MAGID BIGINT
    FREQ REAL
    AMPCOR REAL
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE OMITTED_CHANNELS (
    STA VARCHAR(6)
    CHAN VARCHAR(8)
    TIME DOUBLE PRECISION
    ENDTIME DOUBLE PRECISION
    COMMID BIGINT
    AUTH VARCHAR(15)
    LDDATE TIMESTAMP
);

CREATE TABLE ORIGERR (
    ORID BIGINT
    SXX REAL
    SYY REAL
    SZZ REAL
    STT REAL
    SXY REAL
    SXZ REAL
    SYZ REAL
    STX REAL
    STY REAL
    STZ REAL
    SDOBS REAL
    SMAJAX REAL
    SMINAX REAL
    STRIKE REAL
    SDEPTH REAL
    STIME REAL
    CONF REAL
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE ORIGERR_GA (
    ORID BIGINT
    SXX REAL
    SYY REAL
    SZZ REAL
    STT REAL
    SXY REAL
    SXZ REAL
    SYZ REAL
    STX REAL
    STY REAL
    STZ REAL
    SDOBS REAL
    SMAJAX REAL
    SMINAX REAL
    STRIKE REAL
    SDEPTH REAL
    STIME REAL
    CONF REAL
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE ORIGERR_GA_DEL (
    ORID BIGINT
    SXX REAL
    SYY REAL
    SZZ REAL
    STT REAL
    SXY REAL
    SXZ REAL
    SYZ REAL
    STX REAL
    STY REAL
    STZ REAL
    SDOBS REAL
    SMAJAX REAL
    SMINAX REAL
    STRIKE REAL
    SDEPTH REAL
    STIME REAL
    CONF REAL
    COMMID BIGINT
    LDDATE TIMESTAMP
);

CREATE TABLE ORIGIN (
    LAT REAL
    LON REAL
    DEPTH REAL
    TIME DOUBLE PRECISION
    ORID BIGINT
    EVID BIGINT
    JDATE INTEGER
    NASS SMALLINT
    NDEF SMALLINT
    NDP SMALLINT
    GRN INTEGER
    SRN INTEGER
    ETYPE VARCHAR(7)
    DEPDP REAL
    DTYPE VARCHAR(1)
    MB REAL
    MBID BIGINT
    MS REAL
    MSID BIGINT
    ML REAL
    MLID BIGINT
    ALGORITHM VARCHAR(15)
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_origin PRIMARY KEY (ORID)
);

CREATE TABLE ORIGIN_GA (
    LAT REAL
    LON REAL
    DEPTH REAL
    TIME DOUBLE PRECISION
    ORID BIGINT
    EVID BIGINT
    JDATE INTEGER
    NASS SMALLINT
    NDEF SMALLINT
    NDP SMALLINT
    GRN INTEGER
    SRN INTEGER
    ETYPE VARCHAR(7)
    DEPDP REAL
    DTYPE VARCHAR(1)
    MB REAL
    MBID BIGINT
    MS REAL
    MSID BIGINT
    ML REAL
    MLID BIGINT
    ALGORITHM VARCHAR(15)
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_origin_ga PRIMARY KEY (ORID)
);

CREATE TABLE ORIGIN_GA_DEL (
    LAT REAL
    LON REAL
    DEPTH REAL
    TIME DOUBLE PRECISION
    ORID BIGINT
    EVID BIGINT
    JDATE INTEGER
    NASS SMALLINT
    NDEF SMALLINT
    NDP SMALLINT
    GRN INTEGER
    SRN INTEGER
    ETYPE VARCHAR(7)
    DEPDP REAL
    DTYPE VARCHAR(1)
    MB REAL
    MBID BIGINT
    MS REAL
    MSID BIGINT
    ML REAL
    MLID BIGINT
    ALGORITHM VARCHAR(15)
    AUTH VARCHAR(15)
    COMMID BIGINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_origin_ga_del PRIMARY KEY (ORID)
);

CREATE TABLE ORIGIN_MEA_TRACE (
    ORID BIGINT
    CLUSTAID BIGINT
    ACTIVETIME_LOOKUP DOUBLE PRECISION
    BEST_REF_MATCH_ORID BIGINT
    APPLIED_THRESHOLD REAL
    LDDATE TIMESTAMP
    CONSTRAINT pk_origin_mea_trace PRIMARY KEY (ORID)
);

CREATE TABLE ORIGIN_SDO (
    ORID BIGINT
    CONSTRAINT pk_origin_sdo PRIMARY KEY (ORID)
);

CREATE TABLE ORIGIN_TAG (
    ORID BIGINT
    PROCESS_MODE VARCHAR(32)
    PROCESS_ATTRIBUTE VARCHAR(32)
    NDEF SMALLINT
    LDDATE TIMESTAMP
    CONSTRAINT pk_origin_tag PRIMARY KEY (ORID)
);

CREATE TABLE OUTAGE_STATION_DATA (
    OUTAGE_ID BIGINT
    STA VARCHAR(6)
    START_DATE TIMESTAMP
    END_DATE TIMESTAMP
    AUTHOR VARCHAR(64)
    MODDATE TIMESTAMP
    LDDATE TIMESTAMP
);

